fix(checkout): CHECKOUT-10185 Remove mobile view extra gap

--- a/packages/core/src/scss/themeV2/components/checkout/_checkout.scss
+++ b/packages/core/src/scss/themeV2/components/checkout/_checkout.scss
@@ -36,6 +36,10 @@
             }
         }
 
+        .shipping-header:not(:has(> :not(.is-srOnly))) {
+            padding-bottom: 0;
+        }
+
         .stepHeader {
             flex-wrap: wrap;
             padding: 0;
